[project]
name = "pelican-lessons-log"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "atu4403", email = "73111778+atu4403@users.noreply.github.com" }
]
dependencies = [
    "pelican[markdown]>=4.8.0",
    "pelican-neighbors>=1.2.0",
    "ghp-import>=2.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.2",
]

[tool.hatch.metadata]
allow-direct-references = true
